
2023-05-21  13:05  Christos Zoulas <christos@zoulas.com>
	
	* add SIMH tape format support

2023-02-09  12:50  Christos Zoulas <christos@zoulas.com>
	
	* bump the max size of the elf section notes to be read to 128K
	  and make it configurable

2023-01-08   1:08  Christos Zoulas <christos@zoulas.com>

	* PR/415: Fix decompression with program returning empty

2022-12-26   1:47  Christos Zoulas <christos@zoulas.com>

	* PR/408: fix -p with seccomp
	* PR/412: fix MinGW compilation

2022-12-26  12:26  Christos Zoulas <christos@zoulas.com>

	* release 5.44

2022-12-14   9:24  Christos Zoulas <christos@zoulas.com>

	* Handle nan's so that we don't get internal floating point exceptions
	  when they are enabled (Vincent Mihalkovic)

2022-10-23  10:21  Christos Zoulas <christos@zoulas.com>

	* PR/397: Restore the ability to process files from stdin immediately.

2022-09-20  17:12  Christos Zoulas <christos@zoulas.com>

	* fixed various clustefuzz issues

2022-09-19  15:54  Christos Zoulas <christos@zoulas.com>

	* Fix error detection for decompression code (Vincent Mihalkovic)

2022-09-15  13:50  Christos Zoulas <christos@zoulas.com>

	* Add MAGIC_NO_COMPRESS_FORK and use it to produce a more
	  meaningful error message if we are sandboxing.

2022-09-15  10:45  Christos Zoulas <christos@zoulas.com>

	* Add built-in lzip decompression support (Michal Gorny)

2022-09-14  10:35  Christos Zoulas <christos@zoulas.com>

	* Add built-in zstd decompression support (Martin Rodriguez Reboredo)

2022-09-13  14:55  Christos Zoulas <christos@zoulas.com>

	* release 5.43

2022-09-10   9:17  Christos Zoulas <christos@zoulas.com>

	* Add octal indirect magic (Michal Gorny)

2022-08-17  11:43  Christos Zoulas <christos@zoulas.com>

	* PR/374: avoid infinite loop in non-wide code (piru)
	* PR/373: Obey MAGIC_CONTINUE with multiple magic files (vismarli)

2022-07-26  11:10  Christos Zoulas <christos@zoulas.com>

	* Fix bug with large flist (Florian Weimer)
