@@ -1,4 +1,4 @@
-.\" $File: magic.man,v 1.102 2023/04/18 16:36:31 christos Exp $
+.\" $File: magic.man,v 1.103 2023/07/20 14:32:07 christos Exp $
 .Dd Arpil 18, 2023
 .Dt MAGIC __FSECTION__
 .Os
@@ -788,8 +788,8 @@ and
 .Dv long
 on the platform, even though the Single
 .Ux
-Specification implies that they do.  However, as OS X Mountain Lion has
-passed the Single
+Specification implies that they do.
+However, as OS X Mountain Lion has passed the Single
 .Ux
 Specification validation suite, and supplies a version of
 .Xr file __CSECTION__
