@@ -1,3 +1,6 @@
+2023-07-17  11:53  Christos Zoulas <christos@zoulas.com>
+
+	* PR/465: psrok1: Avoid muslc asctime_r crash
 
 2023-05-21  13:05  Christos Zoulas <christos@zoulas.com>
 	
